--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,10 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
-
+  "trailingComma": "all",
+  "printWidth": 80,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
